--- a/src/app/App.css
+++ b/src/app/App.css
@@ -13,8 +13,10 @@ html {
   overflow: hidden;
 }
 
-.row {
+.App__row {
+  display: flex;
   align-items: flex-start;
   width: inherit;
   height: inherit;
+  padding: 1rem;
 }
