--- a/src/domains/aside/Aside/Aside.css
+++ b/src/domains/aside/Aside/Aside.css
@@ -1,7 +1,8 @@
 .Aside__container {
   display: flex;
   flex-flow: column;
-  width: fit-content;
+  align-items: center;
+  width: 52rem;
   height: 100%;
-  padding: 1rem;
+  padding-inline-end: 1rem;
 }
