--- a/src/domains/main/Diagram/Diagram.css
+++ b/src/domains/main/Diagram/Diagram.css
@@ -1,6 +1,13 @@
 .Diagram__container {
   width: 100%;
   height: 100%;
+  position: relative;
+}
+
+.Diagram__graph {
+  width: 100%;
+  height: 100%;
+  position: relative;
 
   > .mermaid {
     height: 100%;
