--- a/public/styles/basic.css
+++ b/public/styles/basic.css
@@ -20,15 +20,14 @@
   --color-accent-4: #e2f0d7;
   --color-error-1: #ea5558;
   --color-warn-1: #f7cd37;
-/*  --color-dark-strip-1: rgba(0, 0, 0, 0.4); */
+  /*  --color-dark-strip-1: rgba(0, 0, 0, 0.4); */
 
   /* animations */
   --transition: all 0.112s ease-in-out;
-  /* --transition-slow: all 0.2s ease-in-out; */
+  --transition-slow: all 0.2s ease-in-out;
 
   /* typography */
   /* --font-family-sans: Inter, Helvetica, SegoeUI, sans-serif; */
-
   /* --headerHeight: 5rem;
   --footerHeight: 3rem;
   --mainHeight: calc(100% - var(--headerHeight) - var(--footerHeight));
@@ -39,24 +38,29 @@
   /* Shadow levels */
   /* --shadow-accent-2: 0 0.1rem 1rem 0 #94c76a44;
   --shadow-primary-4: 0 0.1rem 1rem 0 #e1e1e144; */
-  --shadow-1: 0 0.4rem 0.8rem rgba(0, 0, 0, 0.08);
-  --shadow-2: 0 0.4rem 1rem rgba(0, 0, 0, 0.2);
+  --shadow-1: 0 0.4rem 0.8rem
+  rgba(0, 0, 0, 0.08);
+  --shadow-2: 0 0.4rem 1rem
+  rgba(0, 0, 0, 0.2);
   /* --top-shadow: 0 -.4px .8rem rgba(0, 0, 0, .08); */
   /* --shadow_item_selection: rgba(0, 0, 0, 0.24) 0px 3px 8px; */
   /* --shadow-2: 0 0.8rem 1.6rem rgba(0, 0, 0, 0.12); */
   /* --shadow-3: 0 1.6rem 2.4rem rgba(0, 0, 0, .12); */
   /* --shadow-4: 0 .2.4rem 3.2rem rgba(0, 0, 0, .12); */
-
   /* --font-regular: 400 1.6rem var(--font-family-sans); */
   /* --font-smaller: 300 1.4rem var(--font-family-sans); */
   /* --border-primary-4: 0.1rem solid var(--color-primary-4); */
- /* --border-accent-2: 0.1rem solid var(--color-accent-2);  */
+  /* --border-accent-2: 0.1rem solid var(--color-accent-2);  */
   --radius: .2rem;
-  --border-active: 0.1rem solid var(--color-accent-1);
+  --border-active: 0.1rem solid
+  var(--color-accent-1);
   --border-passive: 0.1rem solid transparent;
-  --border: .1rem solid vaR(--color-primary-4);
-  --divider: 0.1rem solid var(--color-primary-3);
-  --font: 'Noto Sans', sans-serif;
+  --border: .1rem solid
+  vaR(--color-primary-4);
+  --divider: 0.1rem solid
+  var(--color-primary-3);
+  --font:
+  'Noto Sans', sans-serif;
 }
 
 * {
