--- a/src/domains/aside/FontSize/FontSize.css
+++ b/src/domains/aside/FontSize/FontSize.css
@@ -14,6 +14,7 @@
   height: fit-content;
   width: fit-content;
   cursor: pointer;
+  transition: var(--transition);
 
   &:hover {
     background-color: var(--color-accent-1);
@@ -37,6 +38,7 @@
   border: var(--border);
   right: 0;
   top: 3.3rem;
+  animation-duration: .2s;
 }
 
 .FontSize__title {
