--- a/src/domains/main/Diagram/Diagram.css
+++ b/src/domains/main/Diagram/Diagram.css
@@ -8,11 +8,18 @@
   width: 100%;
   height: 100%;
   position: relative;
+  overflow: scroll;
 
   > .mermaid {
-    height: 100%;
+    height: calc(100% - 5rem);
     display: grid;
     width: auto;
     place-items: center;
+    position: relative;
+
   }
+}
+
+#svg-pan-zoom-controls {
+  /* transform: translate(50%, 100%) scale(0.8); */
 }
