--- a/src/domains/sharing/Sharing/Sharing.css
+++ b/src/domains/sharing/Sharing/Sharing.css
@@ -9,10 +9,13 @@
   position: absolute;
   bottom: 0;
   border-bottom: 1rem solid var(--color-back);
-  transition: var(--transition-slow);
+  transition: height .3s linear;
 
   &:hover {
-    height: fit-content;
+    animation: grow .3s ease-in-out forwards;
+    .Sharing__chevron {
+      transform: rotate(180deg);
+    }
   }
 }
 
@@ -32,4 +35,21 @@
   font-size: 1.6rem;
   font-weight: bold;
   margin-block-end: 1.6rem;
+}
+
+.Sharing__chevron {
+  position: inherit;
+  height: 2rem;
+  width: 2rem;
+  left: calc(50% - 1rem);
+  stroke: var(--color-primary-3);
+}
+
+@keyframes grow {
+  0% {
+    height: 6rem;
+  }
+  100% {
+    height: 11rem;
+  }
 }
