feat: save to url, to svg, remove tooltips from sharing buttons

--- a/src/domains/editor/EditorConfigPanel/EditorConfigPanel.css
+++ b/src/domains/editor/EditorConfigPanel/EditorConfigPanel.css
@@ -6,3 +6,10 @@
   background-color: var(--color-secondary-4);
   width: 100%;
 }
+
+.EditorConfigPanel__row {
+  display: flex;
+  :is(div) + :is(div) {
+    margin-inline-start: 1rem;
+  }
+}
