--- a/src/domains/editor/Docs/Docs.css
+++ b/src/domains/editor/Docs/Docs.css
@@ -11,7 +11,26 @@
 
 .Docs__link {
   text-decoration: none;
-  color: var(--color-black);
+  display: flex;
+  align-items: center;
+  color: var(--color-text);
+  border-bottom: 0.2rem solid transparent;
+  transition: var(--transition-slow);
+
+  &:hover {
+    color: var(--color-info-1);
+    border-bottom-color: var(--color-info-1);
+  }
+}
+
+.Docs__link_icon {
+  height: 1.5rem;
+  width: 1.5rem;
+  margin-inline-end: 0.2rem;
+  margin-block-start: 0.2rem;
+}
+
+.Docs__link_title {
   font-size: 1.5rem;
   font-weight: 600;
 }
