--- a/src/domains/sharing/Sharing/Sharing.css
+++ b/src/domains/sharing/Sharing/Sharing.css
@@ -27,6 +27,7 @@
 
 .Sharing__line_group {
   display: flex;
+  align-items: center;
   :is(div, button) + :is(div, button) {
     margin-inline-start: 1rem;
   }
@@ -52,4 +53,9 @@
   100% {
     height: 11rem;
   }
+}
+
+.Sharing__line_save {
+  font-size: 1.6rem;
+  margin-inline-end: 1rem;
 }
