--- a/src/shared/components/Divider/Divider.css
+++ b/src/shared/components/Divider/Divider.css
@@ -1,13 +1,13 @@
 .Divider__container {
   display:grid;
   place-items: center;
-  height: 100%;
+  height: inherit;
   width: .3rem;
   padding-inline-end: .1rem;
 }
 
 .Divider__item {
   width: .1rem;
-  height: 75%;
+  height: 95%;
   border-right: var(--border)
 }
