--- a/src/domains/editor/Toolbar/Toolbar.module.css
+++ b/src/domains/editor/Toolbar/Toolbar.module.css
@@ -7,6 +7,7 @@
   justify-content: space-between;
   align-items: center;
   padding-inline-start: 1rem;
+  background-color: var(--color-primary-5);
 }
 
 .closed {
