--- a/src/domains/editor/ToolbarButtons/buttons/FontSize/FontSize.module.css
+++ b/src/domains/editor/ToolbarButtons/buttons/FontSize/FontSize.module.css
@@ -6,12 +6,12 @@
   white-space: nowrap;
 
   * {
-    font-family: var(--font);
+    font-family: var(--font-family);
   }
 }
 
 .item {
-  padding: .5rem 1rem;
+  padding: 0.5rem 1rem;
   height: fit-content;
   width: fit-content;
   cursor: pointer;
@@ -39,16 +39,18 @@
   border: var(--border);
   right: 0;
   top: 3.3rem;
-  animation-duration: .2s;
+  animation-duration: 0.2s;
 }
 
 .title {
   font-size: 1.5rem;
   margin-inline-end: 1rem;
+  font-weight: 600;
+  user-select: none;
 }
 
 .button {
-  padding: .5rem 1rem;
+  padding: 0.5rem 1rem;
   border: var(--border);
   cursor: pointer;
 }
