--- a/src/shared/components/Button/Button.css
+++ b/src/shared/components/Button/Button.css
@@ -1,7 +1,7 @@
 .Button__container {
   padding: 0.5rem 1.3rem;
   background-color: var(--color-primary-1);
-  border-radius: var(--radius);
+  border-radius: .2rem;
   display: flex;
   align-items: center;
   padding-block-end: 0.7rem;
@@ -34,7 +34,7 @@
 .Button_label {
   font-size: 1.6rem;
   color: var(--color-white);
-  font-family: var(--font);
+  font-family: var(--font-family);
   margin-inline-end: 1rem;
 }
 
