--- a/src/shared/components/ButtonWithIcon/ButtonWithIcon.module.css
+++ b/src/shared/components/ButtonWithIcon/ButtonWithIcon.module.css
@@ -18,12 +18,12 @@
   & p {
     font-size: 1.5rem;
     font-weight: 600;
-    font-family: var(--font);
+    font-family: var(--font-family);
+    user-select: none;
   }
 
   &:hover:not(:disabled) {
-    color: var(--color-info-1);
-    border-bottom-color: var(--color-info-1);
+    color: var(--color-accent-1);
   }
 
   &:disabled {
