--- a/src/shared/components/ButtonWithIcon/ButtonWithIcon.module.css
+++ b/src/shared/components/ButtonWithIcon/ButtonWithIcon.module.css
@@ -14,6 +14,7 @@
   color: var(--color-text);
   transition: var(--transition-slow);
   text-decoration: none;
+  cursor: pointer;
 
   & p {
     font-size: 1.5rem;
