--- a/public/styles/basic.css
+++ b/public/styles/basic.css
@@ -20,13 +20,14 @@
   --color-accent-4: #e2f0d7;
   --color-error-1: #ea5558;
   --color-warn-1: #f7cd37;
+
   /* animations */
   --transition: all 0.112s ease-in-out;
   --transition-slow: all 0.2s ease-in-out;
-  /* shadow levels */
-  --shadow-1: 0 0.4rem 0.8rem rgba(0, 0, 0, 0.08);
-  --shadow-2: 0 0.4rem 1rem rgba(0, 0, 0, 0.2);
 
+  /* shadow levels */
+  --shadow-1: 0 0.4rem 0.8rem rgb(0 0 0 / 8%);
+  --shadow-2: 0 0.4rem 1rem rgb(0 0 0 / 20%);
   --radius: .2rem;
   --border-active: 0.1rem solid var(--color-accent-1);
   --border-passive: 0.1rem solid transparent;
@@ -40,31 +41,30 @@
 }
 
 html {
-  -moz-osx-font-smoothing: grayscale;
-  scroll-behavior: smooth;
   font-size: 62.5%;
+  -moz-osx-font-smoothing: grayscale;
   overflow: auto;
+  scroll-behavior: smooth;
 }
 
 body {
-  font-family: var(--font-family);
   background-color: var(--color-back);
   color: var(--color-text);
+  font-family: var(--font-family);
 }
 
 #root {
+  inset: 0;
   position: absolute;
-  bottom: 0;
-  top: 0;
-  left: 0;
-  right: 0;
 }
 
 ::-webkit-scrollbar {
   display:none;
+
   /* background-color: transparent;
   width: 0.5rem; */
 }
+
 /*
 ::-webkit-scrollbar-button {
 }
@@ -85,6 +85,7 @@ body {
 
 ::-webkit-resizer {
 } */
+
 /*
 h1 {
   font-weight: 400;
@@ -138,9 +139,9 @@ h6 {
 
 button {
   appearance: none;
-  outline: none;
-  border: none;
   background: none;
+  border: none;
+  outline: none;
   padding: 0;
 }
 
@@ -153,8 +154,7 @@ h6,
 p,
 button {
   margin: 0;
-  margin-block-start: 0;
-  margin-block-end: 0;
+  margin-block: 0 0;
 }
 
 .serif {
