--- a/src/domains/diagram/Main/Main.module.css
+++ b/src/domains/diagram/Main/Main.module.css
@@ -1,7 +1,7 @@
 .container {
-  position: relative;
   grid-area: diagram;
   overflow: hidden;
+  position: relative;
 
   & #svg-pan-zoom-controls {
     transform: translate(50%, 100%) scale(0.8);
@@ -19,9 +19,9 @@
 }
 
 .graph {
-  width: 100%;
   height: 100%;
   position: relative;
+  width: 100%;
 
   > #dmermaid {
     display: none;
@@ -29,9 +29,13 @@
 
   > #mermaid {
     height: inherit;
-    widht: inherit;
-    /* display: grid; */
-    /* place-items: center; */
-    /* position: relative; */
+    width: inherit;
+  }
+}
+
+.plantuml {
+ > svg {
+    height: 100% !important;
+    width: 100% !important;
   }
 }
